# corticore

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  README.md  ROADMAP.md  feature-list.csv  pyproject.toml
.github/workflows/: ci.yml  paper-loop.yml  release-prep.yml  release.yml  swarm-daily.yml  weekend-verifier.yml
deploy/systemd/: README.md  corticore-swarm-report.service  corticore-swarm-report.timer  corticore-swarm.service  corticore-swarm.timer  install.sh
eval/: BASELINE.md  benchmark_embedders.py  check_baseline.py  harness.py
eval/datasets/: squad.py
examples/: quickstart.py
orchestrate/: check_new_papers.py  competitors.yml  prepare_release.py  report_daily.py  run_cloud_agent.py  run_swarm.py  swarm.yml
research/: papers.yaml  taxonomy.md
tests/: conftest.py  test_async_api.py  test_check_baseline.py  test_check_new_papers.py  test_cli.py  test_consolidate.py  test_decay.py  test_embedder_swap.py  test_embedders.py  test_eval_squad.py  test_import_export.py  test_memory.py  test_memory_types.py  test_migrations.py  test_namespaces.py  test_observability.py  test_postgres_integration.py  test_postgres_store.py  test_prepare_release.py  test_report_daily_cli.py  test_retrieval.py  test_run_cloud_agent.py  test_run_swarm_cli.py  test_swarm_config.py  test_swarm_cursor_client.py  test_swarm_gates.py  test_swarm_gitops.py  test_swarm_ledger.py  test_swarm_models.py  test_swarm_orchestrator.py  test_swarm_planning.py  test_swarm_prompts_results.py  test_swarm_runner.py  test_swarm_window.py  test_telegram_report.py  test_version_consistency.py
(+53 files in other folders)
